switch to flex to display all profiles without overlap

--- a/frontend/public/styles/styles.css
+++ b/frontend/public/styles/styles.css
@@ -5,9 +5,9 @@
 }
 
 .display {
-    display: grid;
-    grid-template-columns: 25% 25% 25% 25%;
-    row-gap: 1%;
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: column;
 }
 
 .characterContainer {
